Fixed spells UI on mobile.

--- a/src/client/ui/templates/spells/styles.less
+++ b/src/client/ui/templates/spells/styles.less
@@ -78,6 +78,7 @@
 	background-color: transparent;
 	display: flex;
 	flex-direction: column-reverse;
+	position: fixed;
 
 	.spell {
 		position: relative;
@@ -98,7 +99,5 @@
 			background-color: @greenB;
 			position: absolute;
 		}
-
 	}
-
 }
